client/components/app/geography-lookup/styles.scss
@import 'o-forms/main';
@import 'o-buttons/main';
@import 'o-grid/main';
@import 'o-colors/main';
@import 'o-icons/main';

$warning: #ffec1a;
$bg: #393f4d;
$border: #393f4d;

@include oFormsBaseFeatures(locate-user);

.app {
  .locate-user {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    max-width: none;
    flex: 1;
    color: oColorsGetTextColor(oColorsGetPaletteColor('slate'), 73);
    padding: 0 0 0 10px;

    @include oGridRespondTo($until: L) {
      flex-direction: column;
    }

    @include oGridRespondTo(M) {
      padding: 0 0 0 20px;
    }

    &__form {
      display: flex;
      flex: 1;
      flex-direction: column;
      max-width: 380px;
      height: auto;
      justify-content: flex-start;

      @include oGridRespondTo($until: L) {
        max-width: auto;
        width: 100%;
        margin-bottom: 0.5em;
      }

      label {
        padding-bottom: 0.5em;
        color: oColorsGetTextColor(oColorsGetPaletteColor('slate'), 73);
      }

      &--validation-error {
        .locate-user__affix-wrapper {
          border-color: $warning;
        }

        .locate-user__validation-error-text {
          color: $warning;
        }
      }
    }

    &__text {
      &::placeholder {
        color: oColorsGetTextColor(oColorsGetPaletteColor('slate'), 73);
        text-transform: none;
      }

      color: oColorsGetTextColor(oColorsGetPaletteColor('slate'), 100);
      background-color: $bg;
      margin-top: 0;
      border: 0 none;
      font-size: 20px;
      line-height: 24px;
      text-transform: uppercase;
    }

    &__suffix {
      color: white;
      background-color: $bg;
      margin-left: 1px;
    }

    &__affix-wrapper {
      display: flex;
      flex: 1;
      align-items: center;
      background-color: $bg;
      border: 1px solid $bg;
    }

    & > span {
      display: flex;
      align-items: center;
      text-align: center;
      padding: 0 1.6em;
      @include oGridRespondTo($until: L) {
        display: none;
      }
    }

    &__button,
    &__loading {
      @include oButtons();
      min-height: 40px;
      background-color: $bg;
      border: 0 none;
      display: inline-flex;
      justify-content: center;
      align-items: center;
      min-width: 42px;
      padding: 6px;

      .search-icon {
        @include oIconsGetIcon(
          'search',
          oColorsGetTextColor(oColorsGetPaletteColor('slate'), 100),
          30
        );
      }

      .warning-icon {
        @include oIconsGetIcon('warning-alt', $warning, 30);
      }

      &:not([disabled]):active,
      &:not([disabled]):focus,
      &:not([disabled]):hover {
        background-color: $bg;
      }

      &:not([disabled]):hover {
        .search-icon {
          @include oIconsGetIcon(
            'search',
            oColorsGetTextColor(oColorsGetPaletteColor('slate'), 73),
            30
          );
        }
      }
    }

    &__validation-error-text {
      height: 20px;
      font-size: 12px;
      line-height: 16px;
      display: flex;
      align-items: flex-end;
      padding-left: 9px;
    }

    &__error-icon {
      color: $warning !important;
    }
  }
}

